@@ -304,7 +304,9 @@
   * Updated help to include spanner, copy, save stack.
 
 0.7
-
+  * Removed drag to rotate.
+  * Fixed scaling when dragging turtle.
+  * Disable drag while running.
 
 TODO:
   * Save errors
@@ -348,5 +350,4 @@ KNOWN BUGS:
   * Python show block not compatible with JS show block.
   * Not serious, but there is still a race condition when creating
     if-then-else blocks (so there is a work-around in place).
-  * Mouse x/y is noisy.
   * Break doesn't work in forever loops.
